--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,8 @@
 
     <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-    <script>
-      const App = () => {
-        return React.createElement(
-          "div",
-          { className: 'container' },
-          React.createElement("h1", {}, "Adopt me")
-        );
-      };
+    <script src="./App.js">
 
-      console.log(App)
-
-      const container = document.getElementById('root');
-      const root = ReactDOM.createRoot(container);
-      root.render(React.createElement(App));
     </script>
   </body>
 </html>
