--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   <body>
     <div id="root">not rendered</div>
 
-    <script type="module" src="./App.jsx">
+    <script type="module" src="./App.jsx"></script>
 
-    </script>
   </body>
 </html>
